# frames-accelerate

./: .travis.yml  LICENSE  README.md  TODO  frames-accelerate.cabal  stack.yaml
demo/: Main.hs
src/Frames/: Test.hs
src/Frames/Accelerate/: HList.hs  Rec.hs
