name:                frames-accelerate
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/schernichkin/frames-accelerate#readme
license:             BSD3
license-file:        LICENSE
author:              Stanislav Chernichkin
maintainer:          schernichkin@gmail.com
copyright:           Copyright (C) 2015 Stanislav Chernichkin
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Frames.Accelerate.HList
                     , Frames.Accelerate.Rec
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , accelerate
                     , Frames
                     -- TODO: lens is only for testing here, it should be removed in final version
                     , lens
                     , template-haskell
                     , vinyl
  default-language:    Haskell2010

executable frames-accelerate-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , frames-accelerate
  default-language:    Haskell2010

test-suite frames-accelerate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , frames-accelerate
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schernichkin/frames-accelerate
